<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SecondActivity">

    <ScrollView
        android:id="@+id/scrollView3"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:orientation="vertical"
            android:padding="8dp">

            <TextView
                android:id="@+id/textViewBTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/textBTitle"
                android:textColor="@color/colorAccent"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textViewBSingleName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/textViewBSingleName"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/textViewBBundleName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/textViewBBundleName"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/editTextBMessage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:gravity="center"
                android:inputType="textPersonName"
                android:text="@string/editTextBMessage" />

            <Button
                android:id="@+id/buttonBMain"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/buttonBMain" />

        </LinearLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>